  * Dropped support for block reads in lsl.reader.drx and lsl.reader.tbn
  * Added a new interface attribute to lsl.common.stations.LWAStationBase instances
  * Added support for auto-copy to the LWAUCF in the lsl.common.sdf and lsl.common.sdfADP modules
  * Added a function to lsl.common.stations, getFullStations(), to return a list of full stations
  * General code clean-up using pylint

1.1.4
  * Fixed a missing import statement and a couple of bugs in splitTBN.py
  * Fixed a conjugation problem in the lsl.writer.fitsidi module that caused the image to be transposed in AIPS
  * Fixed a conjugation problem in the lsl.utils.imaging module that caused images created from FITS-IDI files to be transposed
  * Fixed a source enumeration problem in the lsl.writer.fitsidi module that caused excessive source IDs
  * Fixed a bug in lsl.reader.vdif that caused gofast.c not to compile with newer versions of gcc
  * Fixed several problems when using LSL with Numpy >=1.12
  * Updated test_geodesy.py to work with the revised EOP parameter files
  * Fixed a formatting typo in lsl.reader.ldp when getInfo() tries to return an invalid key
  * Fixed a bug in lsl.reader.buffer that could lead to some invalid frames being added to the buffer
  * Dropped support for ADP DRX8 in the lsl.reader.buffer module
  * Dropped support for FreeBSD
  * Added support for printing to location of sync. errors in the lsl.reader modules

1.1.3.2
  * Applied a fix for the course FIFO phase jumps in the core.c FEngineC2/3 functions.

1.1.3.1
  * Re-fixed a bug in the complex functions in lsl.correlator._spec and lsl.correlator._stokes that caused the negative frequencies in odd-sized FFTs to be unpacked incorrectly

1.1.3
  * Fixed a bug in the complex functions in lsl.correlator._core, lsl.correlator._spec, and lsl.correlator._stokes that caused the negative frequencies in odd-sized FFTs to be unpacked incorrectly
  * Updated the tai-utc.dat file for the upcoming leap second in December 2016